@@ -48,11 +48,11 @@ public class CommunityController {
         model.addAttribute("art", boardRepository.boardList("예술"));
         model.addAttribute("science", boardRepository.boardList("과학"));
 
-        model.addAttribute("it1", boardRepository.boardList("IT").getFirst());
-        model.addAttribute("sports1", boardRepository.boardList("스포츠").getFirst());
-        model.addAttribute("eco1", boardRepository.boardList("경제").getFirst());
-        model.addAttribute("art1", boardRepository.boardList("예술").getFirst());
-        model.addAttribute("science1", boardRepository.boardList("과학").getFirst());
+        model.addAttribute("it1", boardRepository.boardList("IT").get(0));
+        model.addAttribute("sports1", boardRepository.boardList("스포츠").get(0));
+        model.addAttribute("eco1", boardRepository.boardList("경제").get(0));
+        model.addAttribute("art1", boardRepository.boardList("예술").get(0));
+        model.addAttribute("science1", boardRepository.boardList("과학").get(0));
 
 
         return "community/community";
